--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -55,4 +55,6 @@ jobs:
       run: bundle exec erblint --lint-all
     - name: Create database
       run: bundle exec rake db:create db:migrate db:seed --trace
+    - name: Run tests
+      run: bundle exec rails test --verbose
 
